# smart-contracts-security-copilot

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_cvl_property.py
backend/app/: config.py  database.py  main.py
backend/app/agents/: __init__.py  graph.py  state.py
backend/app/agents/nodes/: ai_reason.py  explain.py  memory_query.py  parse.py  property_gen.py  report.py  static_scan.py  test_gen.py
backend/app/ai/: client.py
backend/app/ai/prompts/: analysis.py  explain.py  property_gen.py  system.py  test_gen.py
backend/app/detectors/: __init__.py  access_control.py  base.py  delegatecall.py  flash_loan.py  integer_overflow.py  oracle_manipulation.py  reentrancy.py  registry.py  signature_replay.py  unchecked_calls.py
backend/app/memory/: __init__.py  embedder.py  ingestor.py  seed_knowledge.py  vector_search.py
backend/app/models/: __init__.py  embedding.py  finding.py  scan.py
backend/app/routers/: analyze.py  eval.py  explain.py  scans.py
backend/app/schemas/: __init__.py  finding.py  ingest.py  scan.py
backend/tests/test_agents/: test_ai_reason.py  test_parse.py  test_static_scan.py
backend/tests/test_api/: test_analyze.py  test_eval.py  test_explain.py  test_scans.py
backend/tests/test_detectors/: test_access_control.py  test_oracle_manipulation.py  test_reentrancy.py  test_signature_replay.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  (+1 more)
(+21 files in other folders)
